--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h2>Get In Touch</h2>
       <h3>Are you fan of MMA?.</h3>
       <p>Lets watch the next UFC event together. Beer is on me.</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      <a class="btn" href="mailto:snshetty007@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
@@ -52,7 +52,7 @@
     <a class="footer-link" href="https://www.facebook.com/subrahmanya.shetty.33/"><img class="footer-images" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Facebook_logo_36x36.svg/1200px-Facebook_logo_36x36.svg.png" alt="Facebook" ></a>
      <a class="footer-link" href="https://www.linkedin.com/in/subrahmanya-shetty-487442143/"><img class="footer-images"src="https://image.flaticon.com/icons/png/512/174/174857.png" alt="linkedIn profile" ></a>
      <a class="footer-link" href="https://www.instagram.com/shetty_subrahmanya/"><img class="footer-images" src="https://cdn.pixabay.com/photo/2016/09/17/07/03/instagram-1675670_1280.png" alt="Instagram" ></a>
-    <p id="reg">© 2018 Subrahmanya Shetty.</p>
+    <p id="reg">© 2021 Subrahmanya Shetty.</p>
   </div>
 
 
